--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -183,11 +183,28 @@
     <Compile Include="Migrations\202107250045476_Initial.Designer.cs">
       <DependentUpon>202107250045476_Initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202107250048586_AddIsSubscribedToCustomer.cs" />
+    <Compile Include="Migrations\202107250048586_AddIsSubscribedToCustomer.Designer.cs">
+      <DependentUpon>202107250048586_AddIsSubscribedToCustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202107250053199_AddMembershipType.cs" />
+    <Compile Include="Migrations\202107250053199_AddMembershipType.Designer.cs">
+      <DependentUpon>202107250053199_AddMembershipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202107250054399_PopulateAddMembershipTypes.cs" />
+    <Compile Include="Migrations\202107250054399_PopulateAddMembershipTypes.Designer.cs">
+      <DependentUpon>202107250054399_PopulateAddMembershipTypes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202107250101092_AddRequiredToCustomer.cs" />
+    <Compile Include="Migrations\202107250101092_AddRequiredToCustomer.Designer.cs">
+      <DependentUpon>202107250101092_AddRequiredToCustomer.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -276,6 +293,18 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202107250045476_Initial.resx">
       <DependentUpon>202107250045476_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202107250048586_AddIsSubscribedToCustomer.resx">
+      <DependentUpon>202107250048586_AddIsSubscribedToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202107250053199_AddMembershipType.resx">
+      <DependentUpon>202107250053199_AddMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202107250054399_PopulateAddMembershipTypes.resx">
+      <DependentUpon>202107250054399_PopulateAddMembershipTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202107250101092_AddRequiredToCustomer.resx">
+      <DependentUpon>202107250101092_AddRequiredToCustomer.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
