--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -199,9 +199,26 @@
     <Compile Include="Migrations\202107250101092_AddRequiredToCustomer.Designer.cs">
       <DependentUpon>202107250101092_AddRequiredToCustomer.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202107251249238_AddNameToMembershipType.cs" />
+    <Compile Include="Migrations\202107251249238_AddNameToMembershipType.Designer.cs">
+      <DependentUpon>202107251249238_AddNameToMembershipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202107251519400_EditInCustomer.cs" />
+    <Compile Include="Migrations\202107251519400_EditInCustomer.Designer.cs">
+      <DependentUpon>202107251519400_EditInCustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202107251640526_AddBirthDateToCustomer.cs" />
+    <Compile Include="Migrations\202107251640526_AddBirthDateToCustomer.Designer.cs">
+      <DependentUpon>202107251640526_AddBirthDateToCustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202107261224496_AddGenreandsomeAttrbute.cs" />
+    <Compile Include="Migrations\202107261224496_AddGenreandsomeAttrbute.Designer.cs">
+      <DependentUpon>202107261224496_AddGenreandsomeAttrbute.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\MembershipType.cs" />
@@ -210,6 +227,7 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\bootstrap-luman.css" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -269,6 +287,7 @@
     <Content Include="Views\Customers\Index.cshtml" />
     <Content Include="Views\Customers\Details.cshtml" />
     <Content Include="Views\Movies\Index.cshtml" />
+    <Content Include="Views\Movies\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -305,6 +324,18 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202107250101092_AddRequiredToCustomer.resx">
       <DependentUpon>202107250101092_AddRequiredToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202107251249238_AddNameToMembershipType.resx">
+      <DependentUpon>202107251249238_AddNameToMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202107251519400_EditInCustomer.resx">
+      <DependentUpon>202107251519400_EditInCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202107251640526_AddBirthDateToCustomer.resx">
+      <DependentUpon>202107251640526_AddBirthDateToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202107261224496_AddGenreandsomeAttrbute.resx">
+      <DependentUpon>202107261224496_AddGenreandsomeAttrbute.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
