--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -226,6 +226,10 @@
     <Compile Include="Migrations\202107261224496_AddGenreandsomeAttrbute.Designer.cs">
       <DependentUpon>202107261224496_AddGenreandsomeAttrbute.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202107290222399_EditInMovieModel.cs" />
+    <Compile Include="Migrations\202107290222399_EditInMovieModel.Designer.cs">
+      <DependentUpon>202107290222399_EditInMovieModel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\API.cs" />
@@ -238,6 +242,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModel\NewCustomerViewModel.cs" />
+    <Compile Include="ViewModel\NewMovieViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-luman.css" />
@@ -302,6 +307,7 @@
     <Content Include="Views\Movies\Index.cshtml" />
     <Content Include="Views\Movies\Details.cshtml" />
     <Content Include="Views\Customers\CustomerForm.cshtml" />
+    <Content Include="Views\Movies\MovieForm.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -349,6 +355,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202107261224496_AddGenreandsomeAttrbute.resx">
       <DependentUpon>202107261224496_AddGenreandsomeAttrbute.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202107290222399_EditInMovieModel.resx">
+      <DependentUpon>202107290222399_EditInMovieModel.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
