--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -236,6 +236,10 @@
     <Compile Include="Migrations\202107290222399_EditInMovieModel.Designer.cs">
       <DependentUpon>202107290222399_EditInMovieModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202108011256298_SeedUsers.cs" />
+    <Compile Include="Migrations\202108011256298_SeedUsers.Designer.cs">
+      <DependentUpon>202108011256298_SeedUsers.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\API.cs" />
@@ -539,6 +543,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202107290222399_EditInMovieModel.resx">
       <DependentUpon>202107290222399_EditInMovieModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202108011256298_SeedUsers.resx">
+      <DependentUpon>202108011256298_SeedUsers.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
